--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -320,7 +320,7 @@
 
 			            <!-- classe active pour déterminer la première image du diaporama -->
 			            <div class="item active"> 
-			              <img src="Pictures/rs5.jpg" alt=""> 
+			              <img id="sizeimcar1" src="Pictures/rs5.jpg" alt=""> 
 			              <div class="carousel-caption"> 
 			              <h3>RS5</h3> 
 			              <p>Audi RS5 presentation</p> 
@@ -330,7 +330,7 @@
 
 
 			            <div class="item"> 
-			              <img src="Pictures/r8.jpg" alt=""> 
+			              <img id="sizeimcar2" src="Pictures/r8.jpg" alt=""> 
 			              <div class="carousel-caption"> 
 			              <h3>R8</h3> 
 			              <p>Audi R8 presentation</p> 
@@ -340,7 +340,7 @@
 
 
 			            <div class="item"> 
-			              <img src="Pictures/rs7.jpg" alt=""> 
+			              <img id="sizeimcar3" src="Pictures/rs7.jpg" alt=""> 
 			              <div class="carousel-caption"> 
 			              <h3>RS7</h3> 
 			              <p>Audi RS7 presentation</p> 
