--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -30,34 +30,22 @@
 
 
 
-	<body>
-		<img id="bg" src="Pictures/fond.jpg" alt="bg">
+	<body id="body">
 		<div class="panel panel-default">
 		<div id="one"></div>
  	 		<div id="lol" class="panel-body">
-    			<p>PRESENTATIONS</p>
-    			<div class="progress">
-  					<div id="bar1" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="20" style="width: 100%">
-   					100%
-  					</div>
-				</div>
+    			<p id="txtpres">PRESENTATIONS</p>
   			</div>		
 	  			<div id="lol2" class="panel-body">
 	  			<div id="two"></div>
-	    			<p id="tex">GALLERY</p>
-	    			<div class="progress">
-	  					<div id="bar2" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="20" style="width: 100%">
-	   					100%
-	  					</div>
-					</div>
+	    			<p id="txtgal">GALLERY</p>
 					<div class="row">
 	  					<div class="col-sm-10">
 	    					<div class="thumbnail">
 	      					<img class="img-circle" src="Pictures/rs6.jpg" alt="...">
 	      					<div class="cadre" class="caption">
 	        						<h3>RS6</h3>
-	        						<p>The Audi RS 6 quattro, commonly referred to as the RS6 ' is a mid-size sports-focused executive car, produced by the high-performance private subsidiary company quattro GmbH, for Audi AG, part of the Volkswagen Group.
-									The first and second versions of the RS6 were produced as a five-door five-seat "Avant".</p>
+	        						<p>The Audi RS 6 quattro, commonly referred to as the RS6 ' is a mid-size sports-focused executive car.</p>
 	        						<p><a href="#" class="btn btn-primary bou" role="button">Details</a> <a href="#" class="btn btn-default bo" role="button">Web</a></p>
 	      					</div>
 	    					</div>
@@ -65,7 +53,7 @@
 	      					<img class="img-circle" src="Pictures/rs4.jpg" alt="...">
 	      					<div class="cadre" class="caption">
 	        						<h3>RS4</h3>
-	        						<p>The Audi RS4 quattro is the top tier and highest performing version of some specific generations of the Audi A4 range of automobiles. It is a sports-focused compact executive car produced by Audi's high-performance private subsidiary quattro GmbH, in limited numbers.</p>
+	        						<p>The Audi RS4 quattro is the top tier and highest performing version of some specific generations of the Audi A4 range of automobiles.</p>
 	        						<p><a href="#" class="btn btn-primary bout" role="button">Details</a> <a href="#" class="btn btn-default bo" role="button">Web</a></p>
 	      					</div>
 	    					</div>
@@ -73,51 +61,25 @@
 	      					<img class="img-circle" src="Pictures/rs3.jpg" alt="...">
 	      					<div class="cadre" class="caption">
 	        						<h3>RS3</h3>
-	        						<p>The Audi RS 3 Sportback is the hot hatch version of the Audi A3 compact luxury hatchback. It had a limited production between 2011 and 2012 and was available exclusively in 5 door hatchback form. In fact, the Audi RS 3 Sportback is one of the few 5 door hot hatches in the Asphalt series. She's usually enjoyed by young men who like sport's cars.</p>
+	        						<p>The Audi RS 3 Sportback is the hot hatch version of the Audi A3 compact luxury hatchback.</p>
 	        						<p><a href="#" class="btn btn-primary bouto" role="button">Details</a> <a href="#" class="btn btn-default bo" role="button">Web</a></p>
 	      					</div>
 	    					</div>
 	  					</div>
 					</div>
-					<div class="alert fade in a">
-						<button class="close" type="button" data-dismiss="alert">X</button>
-						<strong>Master yourself, master the ennemi!</strong></br>
-						Wut, you're still watching those cars ? Don't wait anymore, click and buy 'em !</br>
-						<strong>Such a great sentence, right?</strong>
-						It's a joke, of course. Have fun with the little monsters here !					
-					</div>
-					<div class="alert fade in a">
-						<button class="close" type="button" data-dismiss="alert">X</button>
-						<strong>Hey, it's me, once again !</strong></br>
-						I don't even know what I could say, so dumb..				
-					</div>
-					<div class="alert alert-block alert-error fade in a">
-						<button class="close" type="button" data-dismiss="alert">X</button>
-						<h5 class="alert-heading"><strong>Hm, last thing !</strong></h5>
-						<p>Nop, I just wanted to put another alert ahaha </p>
-						<p>
-							<a id="watch" class="btn btn-danger" href="#three">Watch this !</a>
-							<a id="ogo" class="btn" href="#one">See you later.</a>						
-						</p>			
-					</div>
 	  			</div>
 	  		<div id="three">
 	  			<div id="lol3" class="panel-body">
-	    			<p>VIDEOS</p>
-	    			<div class="progress">
-	  					<div id="bar3" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="20" style="width: 100%">
-	   					100%
-	  					</div>
-					</div>
+	    			<p id="txtvid"></br>VIDEOS</p>
 					<div id="div">
 						<div class="media">
-  							<div id="pad" class="media-left media-middle">
+  							<div class="media-left media-middle">
     							<a href="#lol3"</a>
-      							<video id="cul" controls src="Pictures/r8.mp4" alt="...">
+      							<video class="coulvid" controls src="Pictures/r8.mp4" alt="...">
     							</a>
   							</div>
-  							<div class="media-body">
-    							<h4 class="media-heading"> <strong>Audi RS8's performances</strong></h4>
+  							<div class="media-body coulvid">
+    							<h4 class="media-heading"> <strong id="underlineR8">Audi R8's performances</strong></h4>
    					 	 	The Audi R8 was initially equipped with a 4.2 litre V8 engine. Specifically, it is an all-aluminium alloy 32-valve (four valves per cylinder) petrol engine, utilising Fuel Stratified Injection (FSI),and has a displacement of 4,163 cubic centimetres (254.0 cu in).
    					 	 	It develops a motive power output of 420 metric horsepower (309 kW; 414 bhp) (Directive 80/1269/EEC),and generates 430 newton metres (317 lbf·ft) of torque, on 98 RON 'Super Unleaded' petrol. 				
    					 	 	The 4 wheel drive system is biased towards the rear; it sends 30% of its power to the front wheels and 70% to the rear. 
@@ -130,85 +92,34 @@
 							On Bedford Autodrome, tested by Evo Magazine, the R8 was faster than the Lamborghini Gallardo.
   							</div>
 						</div>
-						<div class="media">
-  							<div class="media-left media-middle">
-    							<a href="#lol3">
-      							<video controls src="Pictures/rs5.mp4" alt="...">
-    							</a>
-  							</div>
-  							<div class="media-body">
-    							<h4 class="media-heading xd"><strong>Audi RS5's performances</strong></h4>
-   					 		Like the proverbial iron fist in a velvet glove, the RS5 packs a powerful punch, boasting a 450-hp 4.2-liter V-8 that loves to rev. 
-   					 	 	There is a seven-speed dual-clutch transmission, Quattro all-wheel drive, and a sport-tuned suspension, all on hand for maximum driving enjoyment. 
-   					 	 	The RS5 is available as coupe or as a cabriolet for those who like a little sun with their fun. 
-   					 	 	While it’s pricey—and could still use a bit more soul—few cars combine speed and beauty at so high a level as the RS5.
-   					 	 	The Audi RS5 is what happens when you give the gang at Quattro GmbH, Audi’s in-house performance division, a long leash and an open checkbook. 
-   					 	 	While it shares its basic silhouette with the comparatively pedestrian A5/S5 coupe, the RS5 is an entirely different beast. At its core is a 450-hp 4.2-liter naturally aspirated V-8 that loves to rev to its 8300-rpm redline. 
-   					 	 	(For those keeping score, that’s more than double the 220 horsepower produced by the turbocharged 2.0-liter four found in the A5 and 117 more than the 333-hp 3.0-liter supercharged V-6 in the S5.) 
-   					 	 	All-wheel drive is standard, and Audi’s seven-speed S tronic dual-clutch automatic is the sole transmission choice.
-							The materials imbue a reserved, high-quality feel, and the fit and assembly is befitting of a vehicle costing $70K-plus.  
-  							</div>
-						</div>
-						<div class="media">
-	  						<div class="media-left media-middle">
-    							<a href="#lol3">
-	      						<video controls  src="Pictures/rs3.mp4" alt="...">
-    							</a>
-  							</div>
-  							<div class="media-body">
-	    						<h4 class="media-heading"><strong>Audi RS3's performances</strong></h4>
-							The official announcement serves as confirmation of what Audi has said several times: that it will offer Americans a version of the RS3 eventually. 
-							Even so, it’s nice to see the hotted-up sedan in the metal. The four-door, betrunked RS3 looks sharp and even a bit menacing with its extra vents up front, attractive 19-inch wheels, and a couple of huge exhaust outlets. 
-							The Quattro lettering included on every Audi RS model is prominently displayed on the lower grille, and the interior has red stitching throughout, with leather sport seats and several RS logos so you won’t mistake the car for a plebeian S3.
-							As for the componentry, it’s all relatively familiar stuff. The 2.5-liter turbo five with 400 horsepower and 354 lb-ft of torque is also used in the TT RS, Audi’s sports coupe that shares its MQB platform with the entire A3 range. 
-							Audi says the combination of the five-cylinder with a seven-speed dual-clutch automatic transmission will get the RS3 from zero to 62 mph in 4.1 seconds; considering the last TT RS went from zero to 60 mph in well under 4.0 seconds, packing 40 fewer horses, we wouldn’t be surprised if the RS3 proves to be a bit quicker than Audi’s estimate. 
-							A top speed of 174 mph is also an impressive metric.
-							The RS3’s Quattro all-wheel-drive system will distribute torque with a stronger bias toward the rear axle (Audi doesn’t give specific numbers), and this car rides an inch lower than a regular A3. 
-  							</div>
-						</div>
 	  				</div>	
 				</div>
 			</div>
 			<div id="lol4" class"panel-body">
-				<p>FORM</p>
-				<div class="progress">
-					<div id="bar4" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="20" style="width: 100%">
-					100%
-					</div>
-				</div>
+				<p id="txtform"></br>FORM</p>
 				<form>
 					<div class="form-group con">
-						<label for="exampleInputName1">Name :</label>
+						<label class="txtformu" for="exampleInputName1">Name :</label>
 						<input type="Name" class="form-control" id="exampleInputName1" placeholder="Ex: Jean-Barnabé">
 					</div>
 					<div class="form-group con">
-						<label for="exampleInputEmail1">Email :</label>
+						<label class="txtformu" for="exampleInputEmail1">Email :</label>
 						<input type="Email" class="form-control" id="exampleInputEmail1" placeholder="Ex: Example.ex@opé.dom">
 					</div>
 					<div class="form-group con">
-						<label for="exampleInputTel1">Telephon number :</label>
+						<label class="txtformu" for="exampleInputTel1">Telephon number :</label>
 						<input type="Tel" class="form-control" id="exampleInputTel1" placeholder="Ex: 0601020304">
 					</div>
 					<div class="form-group hey">
-						<label for="exampleInputFile">File input :</label>
+						<label class="txtformu" for="exampleInputFile">File input :</label>
 						<input type="file" id="exampleInputfile">
 					</div>
 					<p id="help" class="help-block">Just click on this button and find your file.</p>
-					<div class="checkbox hey">
-						<label id="lab">
-							<input class="checkbox"> <p>Check me out</p>
-						</label>
-					</div>
 					<button id="b" type="submit" class="btn btn-default hey">Submite</button>
 				</form>
 			</div>
-			<div id="lol5" class"panel-body">
-				<p>CONTACT</p>
-				<div class="progress">
-					<div id="bar5" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="20" style="width: 100%">
-					100%
-					</div>
-				</div>
+			<div id="lol5" class="panel-body">
+				<p id="txtcont"></br>CONTACT</p>
 				<div  id="tab" class="panel panel-default">
 			 		<div id="how" class="panel-heading"><strong>How to contact us ?</strong></div>
 			  			<table class="table table-striped table-inverse">
@@ -251,7 +162,16 @@
 							      <td>Nahel.Chazot@Groupe-Gsx.com</td>
 							    </tr>
 							</tbody>
-						</table>
+						</table>		
+					</div>
+						<div id="al" class="alert fade in a">
+						<button class="close" type="button" data-dismiss="alert">X</button>
+						<strong class="strg">Each member could help you :</strong></br>
+						If you want more informations on our cars, ask the secretary.</br>
+						<strong class="strg">Each car could be bought :</strong></br>
+						Of course, it's allowed to test cars befor making a choice, don't worry. They're also in video more higher.
+						But be careful, in case of damages, you've to pay 800$..</div>
+						<p id="end">.</p>
 					</div>
 				</div>
 	
@@ -375,7 +295,7 @@
 			    </div>
 			</div>
 			<div>
-				<button id="bouton" class="btn"><a id="link" data-toggle="popover" title="Hi!" data-content="What a useles thing..">CLICK</a></button>
+				<button id="bouton" class="btn"><a id="link" data-toggle="popover" title="Hi!" data-content="Welcom on my carousel..">CLICK</a></button>
 			</div>
 			
 <!-- /////////////////////////////////// JAVA SCRIPT //////////////////////////////////////// -->
