--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -38,7 +38,7 @@
   			</div>		
 	  			<div id="lol2" class="panel-body">
 	  			<div id="two"></div>
-	    			<p id="txtgal">GALLERY</p>
+	    			<p id="txtgal"></br>GALLERY</p>
 					<div class="row">
 	  					<div class="col-sm-10">
 	    					<div class="thumbnail">
@@ -98,15 +98,15 @@
 			<div id="lol4" class"panel-body">
 				<p id="txtform"></br>FORM</p>
 				<form>
-					<div class="form-group con">
+					<div class="form-group formu">
 						<label class="txtformu" for="exampleInputName1">Name :</label>
 						<input type="Name" class="form-control" id="exampleInputName1" placeholder="Ex: Jean-Barnabé">
 					</div>
-					<div class="form-group con">
+					<div class="form-group formu">
 						<label class="txtformu" for="exampleInputEmail1">Email :</label>
 						<input type="Email" class="form-control" id="exampleInputEmail1" placeholder="Ex: Example.ex@opé.dom">
 					</div>
-					<div class="form-group con">
+					<div class="form-group formu">
 						<label class="txtformu" for="exampleInputTel1">Telephon number :</label>
 						<input type="Tel" class="form-control" id="exampleInputTel1" placeholder="Ex: 0601020304">
 					</div>
