--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	    <title>Site vitrine Gsx</title>
+	    <title>ShowCaseCars by Gsx</title>
 	    <!-- Bootstr ap -->
 	    <link rel="icon" href="Pictures/logo.png"/>
     	<link href="BootstrapFiles/css/bootstrap.min.css" rel="stylesheet">
@@ -171,7 +171,7 @@
 						<strong class="strg">Each car could be bought :</strong></br>
 						Of course, it's allowed to test cars befor making a choice, don't worry. They're also in video more higher.
 						But be careful, in case of damages, you've to pay 800$..</div>
-						<p id="end">.</p>
+						<p id="end">.</br></br></br></br></br></br></br></br></br></br><</br><</br><</br></br></br>.</p>
 					</div>
 				</div>
 	
