--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 		        		<li id="band"><a href="#one">Presentations</a></li>
 		        		<li><a href="#lol2">Gallery</a></li>
 		        		<li><a href="#lol3">Vidéos</a></li>
-		        		<li class="der"><a href="#">Communication<span class="caret"></span></a>
+		        		<li class="der"><a href="#lol4">Communication<span class="caret"></span></a>
 		        	  		  <ul class="dropdown-menu">
 		            			<li class="list"><a href="#lol4">Form</li>
 		            			<li class="liste"><a href="#lol5">Contact info.</a></li>
