--- a/index.html
+++ b/index.html
@@ -179,39 +179,39 @@
 		  		<div class="container-fluid">
 		    	<!-- Brand and toggle get grouped for better mobile display -->
 		    	<div class="navbar-header">
-		      	<a id="conteneur" class="navbar-brand" href="#one">
+		      	<a id="conteneur" class="navbar-brand band" href="#one">
 		      		<img id="logo" src="Pictures/logo.png" alt="logo">
 		      		<p>Gsx : Beauty creator</p>
 		      	</a>
 		    	</div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
-		    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		    	<div class="collapse navbar-collapse band" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav">
-		        		<li id="band"><a href="#one">Presentations</a></li>
-		        		<li><a href="#lol2">Gallery</a></li>
-		        		<li><a href="#lol3">Vidéos</a></li>
-		        		<li class="der"><a href="#lol4">Communication<span class="caret"></span></a>
-		        	  		  <ul class="dropdown-menu">
-		            			<li class="list"><a href="#lol4">Form</li>
-		            			<li class="liste"><a href="#lol5">Contact info.</a></li>
+		        		<li class="band"><a href="#one">Presentations</a></li>
+		        		<li class="band"><a href="#lol2">Gallery</a></li>
+		        		<li class="band"><a href="#lol3">Vidéos</a></li>
+		        		<li class="der band"><a href="#lol4">Communication<span class="caret"></span></a>
+		        	  		  <ul id="write" class="dropdown-menu band">
+		            			<li class="list band der"><a href="#lol4">Form</li>
+		            			<li class="liste band"><a href="#lol5">Contact info.</a></li>
 		          		  </ul>
 		       		</li>
 		      	</ul>
-		      	<form class="navbar-form navbar-left">
+		      	<form class="navbar-form navbar-left band">
 		        		<div class="form-group">
 		          		<input type="text" class="form-control" placeholder="Doesn't work..">
 		        		</div>
 		        		<button type="submit" class="btn btn-default">Search</button>
 		      	</form>
-		      	<ul class="nav navbar-nav navbar-right">
+		      	<ul class="nav navbar-nav navbar-right band">
 		        		<li><a href="#">Regimen</a></li>
 		          		<li class="der"><a href="#">Account<span class="caret"></span></a>
-		          			<ul class="dropdown-menu">
-		            			<li class="list"><a href="#">Personals info.</a></li>
-		            			<li class="lis"><a href="#">Bank details</a></li>
-		            			<li class="lis"><a href="#">Edit</a></li>
-		            			<li class="liste"><a href="#">Disconnect</a></li>
+		          			<ul id="write" class="dropdown-menu band">
+		            			<li class="list band"><a href="#">Personals info.</a></li>
+		            			<li class="lis band"><a href="#">Bank details</a></li>
+		            			<li class="lis band"><a href="#">Edit</a></li>
+		            			<li class="liste band"><a href="#">Disconnect</a></li>
 		          			</ul>
 		        			</li>
 		      	</ul>
@@ -260,7 +260,7 @@
 
 
 			            <div class="item"> 
-			              <img id="sizeimcar3" src="Pictures/rs7.jpg" alt=""> 
+			              <img id="sizeimcar3" src="Pictures/rs72.jpg" alt=""> 
 			              <div class="carousel-caption"> 
 			              <h3>RS7</h3> 
 			              <p>Audi RS7 presentation</p> 
