--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 						<strong class="strg">Each car could be bought :</strong></br>
 						Of course, it's allowed to test cars befor making a choice, don't worry. They're also in video more higher.
 						But be careful, in case of damages, you've to pay 800$..</div>
-						<p id="end">.</br></br></br></br></br></br></br></br></br></br><</br><</br><</br></br></br>.</p>
+						<p id="end">.</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>.</p>
 					</div>
 				</div>
 	
