--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
    ================================================== -->
    <section id="about">
 
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <div id="myCarousel" class="carousel slide carousel-fade"" data-ride="carousel">
         <!-- Carousel indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -98,28 +98,28 @@
         </ol>   
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
-            <div class="item active">
+            <div class="item active img-fluid">
                 <img src="https://i.gyazo.com/189f29a5f6ad770d47d5ba746aefaaba.png" alt="First Slide">
             </div>
-            <div class="item">
+            <div class="item img-fluid">
                 <img src="https://i.gyazo.com/da2eb8c57788a96b15dd6c6ee8225f31.png" alt="Second Slide">
             </div>
-            <div class="item">
+            <div class="item img-fluid">
                 <img src="https://i.gyazo.com/f029200651d1b4ae7390331c61bc4d35.png" alt="Third Slide">
             </div>
-            <div class="item">
+            <div class="item img-fluid">
                 <img src="https://i.gyazo.com/8846ea067228314b311e7ef8285882ef.png" alt="Fourth Slide">
             </div>
-            <div id="sok1" class="item">
+            <div id="sok1" class="item img-fluid">
                 <img src="https://i.gyazo.com/5a550884e67d5fbf189087f661ea98c3.png" alt="Fifth Slide">
             </div>
-            <div id="sok2" class="item">
+            <div id="sok2" class="item img-fluid">
                 <img src="https://i.gyazo.com/4cfc670fb09e0d1c92bab9318eada65f.png" alt="Sixth Slide">
             </div>
-            <div class="item">
+            <div class="item img-fluid">
                 <img src="https://i.gyazo.com/5545142483bfdb152edc7ac9d422e361.png" alt="Seventh Slide">
             </div>
-            <div class="item">
+            <div class="item img-fluid">
                 <img src="https://i.gyazo.com/710dc68040e6d8158081ffb41c1eed10.png" alt="Heigth Slide">
             </div>
         </div>
