--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="row education">
  
          <div class="three columns header-col">
-            <h1><span>Scolarité :</span></h1>
+            <h1><span>Scolarité:</span></h1>
          </div>
  
          <div class="five columns main-col">
@@ -195,7 +195,7 @@
       <div class="row work">
 
          <div class="three columns header-col">
-            <h1><span>Emplois :</span></h1>
+            <h1><span>Emplois:</span></h1>
          </div>
 
          <div class="five columns main-col">
@@ -205,10 +205,10 @@
                <div class="twelve columns">
 
                   <h3 id="fest">Ventes/Informations</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">2015/2016/2017</em></p>
+                  <p class="info">Vendeur<span>&bull;</span> <em class="date">2015/2016/2017</em></p>
 
                   <p>
-                  Point d'acceuil, de ventes et d'informations </br> pour l'association Eclat : </br> responsable du festival international de rue.
+                  Point d'accueil, de ventes et d'informations </br> pour l'association Eclat : </br> responsable du festival international de rue.
                   </p>
 
                </div>
@@ -223,7 +223,7 @@
                   <p class="info">Chef de rang<span>&bull;</span> <em class="date">2017</em></p>
 
                   <p>
-                  Service, bar.. au sein de 2 affaire parisiennes. </br> - Marinette et Au Bureau (Chatou) 
+                  Service, bar.. au sein de 2 affaires parisiennes. </br> - Marinette et Au Bureau (Chatou) 
                   </p>
 
                </div>
@@ -254,26 +254,19 @@
       <div class="row skill">
 
          <div class="three columns header-col">
-            <h1><span>Skills :</span></h1>
+            <h1><span>Compétences:</span></h1>
          </div>
 
          <div class="nine columns main-col">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt.
-            </p>
-
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
-                  <li><span class="bar-expand illustrator"></span><em>Illustrator</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
-						<li><span class="bar-expand css"></span><em>CSS</em></li>
-						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
-                  <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
+					  <li><span class="bar-expand langages"></span><em>Langages informatiques</em></li>
+            <li><span class="bar-expand methodo"></span><em>Méthodologie et modélisation</em></li>
+						<li><span class="bar-expand systeme"></span><em>Système d'exploitation et réseaux</em></li>
+						<li><span class="bar-expand logiciel"></span><em>Outils et atelier génie logiciel</em></li>
+						<li><span class="bar-expand bdd"></span><em>Système gestion bases de données</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
@@ -585,59 +578,6 @@
 
 
 
-   <!-- Testimonials Section
-   ================================================== -->
-   <section id="testimonials">
-
-      <div class="text-container">
-
-         <div class="row">
-
-            <div class="two columns header-col">
-
-               <h1><span>Client Testimonials</span></h1>
-
-            </div>
-
-            <div class="ten columns flex-container">
-
-               <div class="flexslider">
-
-                  <ul class="slides">
-
-                     <li>
-                        <blockquote>
-                           <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-                           to do what you believe is great work. And the only way to do great work is to love what you do.
-                           If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
-                           </p>
-                           <cite>Steve Jobs</cite>
-                        </blockquote>
-                     </li> <!-- slide ends -->
-
-                     <li>
-                        <blockquote>
-                           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                           Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                           nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
-                           </p>
-                           <cite>Mr. Adobe</cite>
-                        </blockquote>
-                     </li> <!-- slide ends -->
-
-                  </ul>
-
-               </div> <!-- div.flexslider ends -->
-
-            </div> <!-- div.flex-container ends -->
-
-         </div> <!-- row ends -->
-
-       </div>  <!-- text-container ends -->
-
-   </section> <!-- Testimonials Section End-->
-
-
    <!-- Contact Section
    ================================================== -->
    <section id="contact">
@@ -763,19 +703,9 @@
 
          <div class="twelve columns">
 
-            <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
-            </ul>
-
             <ul class="copyright">
-               <li>&copy; Copyright 2014 CeeVee</li>
-               <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>   
+               <li>&copy; 2017, All rights reserved, by Gabin Salabert. </li>
+               <li>Design by Gabin Salabert</li>   
             </ul>
 
          </div>
