Added some stuff

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                   <p class="info">Chef de rang<span>&bull;</span> <em class="date">2017</em></p>
 
                   <p>
-                  Service, bar.. au sein de 2 affaires parisiennes. </br> - Marinette et Au Bureau (Chatou) 
+                  Service, bar, plonge.. au sein de 2 affaires parisiennes. </br> - Marinette et Au Bureau (Chatou) 
                   </p>
 
                </div>
@@ -282,7 +282,7 @@
    ================================================== -->
    <section id="portfolio">
 
-      <div class="row">
+      <div id="ttt" class="row">
 
          <div class="twelve columns collapsed">
 
@@ -295,7 +295,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
-                        <img alt="" src="images/portfolio/coffee.jpg">
+                        <img alt="" src="images/rubylogo.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Coffee</h5>
