--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
          <div class="twelve columns collapsed">
 
-            <h1>Check Out Some of My Works.</h1>
+            <h1> Langages, logiciels... </h1>
 
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
@@ -298,8 +298,8 @@
                         <img alt="" src="images/rubylogo.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Coffee</h5>
-                              <p>Illustrration</p>
+          					      <h5>Langage Ruby</h5>
+                              <p>Programmation Objet</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -312,11 +312,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/console.jpg">
+                        <img id="oui" alt="" src="images/ccc.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Console</h5>
-                              <p>Web Development</p>
+          					      <h5>Langages C, C++ et C#</h5>
+                              <p>Programmation Algorithmique et Objet</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -437,16 +437,16 @@
 
          <div id="modal-01" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-coffee.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/rubylogo.png" alt="" />
 
 		      <div class="description-box">
-			      <h4>Coffee Cup</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+			      <h4>Précisions :</h4>
+			      <p>Le langage est souvent présenté comme évitant au maximum les mauvaises surprises, selon le principe de moindre surprise12. Mais puisqu'il n'est pas possible d'éviter la surprise de tous les utilisateurs, Yukihiro Matsumoto précise qu'il cherche surtout à éviter sa propre surprise13. Ainsi, plus on connaît le langage, plus on connaît la logique de son auteur, et moins on s'étonne des fonctionnalités qu'on découvre.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Source : Wikipédia</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
+               <a href="https://fr.wikipedia.org/wiki/Ruby">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -454,7 +454,7 @@
 
          <div id="modal-02" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-console.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/ccc.jpg" alt="" />
 
 		      <div class="description-box">
 			      <h4>Console</h4>
@@ -592,16 +592,14 @@
 
             <div class="ten columns">
 
-                  <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                  voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                  <p class="lead">Pour de plus amples informations, n'hésitez pas à me contacter à l'adresse Gabin.salabert3@laposte.net ou à laisser un message ici. Vous pouvez aussi accèder à mon Github afin d'avoir les détails de mes projets en cours et de mes réalisations.. Bonne continuation et merci d'avoir consulter mon site !
                   </p>
 
             </div>
 
          </div>
 
-         <div class="row">
+         <div id="ctact" class="row">
 
             <div class="eight columns">
 
@@ -653,37 +651,27 @@
 
                <div class="widget widget_contact">
 
-					   <h4>Address and Phone</h4>
+					   <h4>Adresse :</h4>
 					   <p class="address">
-						   Jonathan Doe<br>
-						   1600 Amphitheatre Parkway <br>
-						   Mountain View, CA 94043 US<br>
-						   <span>(123) 456-7890</span>
+						   Salabert Gabin<br>
+						   Clermont-Ferrand, 63000 <br>
+						   Aurillac, 15130<br>
 					   </p>
 
 				   </div>
 
                <div class="widget widget_tweets">
 
-                  <h4 class="widget-title">Latest Tweets</h4>
 
-                  <ul id="twitter">
-                     <li>
-                        <span>
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                        Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum
-                        <a href="#">http://t.co/CGIrdxIlI3</a>
-                        </span>
-                        <b><a href="#">2 Days Ago</a></b>
-                     </li>
-                     <li>
-                        <span>
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                        eaque ipsa quae ab illo inventore veritatis et quasi
-                        <a href="#">http://t.co/CGIrdxIlI3</a>
-                        </span>
-                        <b><a href="#">3 Days Ago</a></b>
-                     </li>
+                  </br></br></br></br></br></br>
+                  <h4 class="widget-title">Mes réseaux :</h4>
+                  </br></br>
+                  <ul class="social">
+                     <li><a href="https://twitter.com/GabinSalabert"><i class="fa fa-twitter"></i></a></li>
+                     <li><a href="https://www.linkedin.com/in/gabin-salabert-30077b150/"><i class="fa fa-linkedin"></i></a></li>
+                     <li><a href="https://www.instagram.com/gabzslbt/"><i class="fa fa-instagram"></i></a></li>
+                     <li><a href="https://www.pinterest.fr/gabinsalabert/"><i class="fa fa-pinterest"></i></a></li>
+                     <li><a href="https://github.com/GabinSalabert"><i class="fa fa-github"></i></a></li>
                   </ul>
 
 		         </div>
@@ -701,7 +689,7 @@
 
       <div class="row">
 
-         <div class="twelve columns">
+         <div id="foot" class="twelve columns">
 
             <ul class="copyright">
                <li>&copy; 2017, All rights reserved, by Gabin Salabert. </li>
