--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">Réalisations</a></li>
             <li><a class="smoothscroll" href="#resume">Formation</a></li>
-            <li><a class="smoothscroll" href="#portfolio">Compétences</a></li>
+            <li><a class="smoothscroll" href="#comp">Compétences</a></li>
             <li><a class="smoothscroll" href="#contact">Me contacter</a></li>
          </ul> <!-- end #nav -->
 
@@ -94,7 +94,6 @@
             <li data-target="#myCarousel" data-slide-to="4"></li>
             <li data-target="#myCarousel" data-slide-to="5"></li>
             <li data-target="#myCarousel" data-slide-to="6"></li>
-            <li data-target="#myCarousel" data-slide-to="7"></li>
         </ol>   
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
@@ -112,9 +111,6 @@
             </div>
             <div id="sok1" class="item img-fluid">
                 <img src="https://i.gyazo.com/5a550884e67d5fbf189087f661ea98c3.png" alt="Fifth Slide">
-            </div>
-            <div id="sok2" class="item img-fluid">
-                <img src="https://i.gyazo.com/4cfc670fb09e0d1c92bab9318eada65f.png" alt="Sixth Slide">
             </div>
             <div class="item img-fluid">
                 <img src="https://i.gyazo.com/5545142483bfdb152edc7ac9d422e361.png" alt="Seventh Slide">
@@ -251,36 +247,38 @@
 
       <!-- Skills
       ----------------------------------------------- -->
-      <div class="row skill">
+      <section id="comp">
+        <div class="row skill">
 
-         <div class="three columns header-col">
-            <h1><span>Compétences:</span></h1>
-         </div>
+           <div class="three columns header-col">
+              <h1><span>Compétences:</span></h1>
+           </div>
 
-         <div class="nine columns main-col">
+           <div class="nine columns main-col">
 
-				<div class="bars">
+  				<div class="bars">
 
-				   <ul class="skills">
-					  <li><span class="bar-expand langages"></span><em>Langages informatiques</em></li>
-            <li><span class="bar-expand methodo"></span><em>Méthodologie et modélisation</em></li>
-						<li><span class="bar-expand systeme"></span><em>Système d'exploitation et réseaux</em></li>
-						<li><span class="bar-expand logiciel"></span><em>Outils et atelier génie logiciel</em></li>
-						<li><span class="bar-expand bdd"></span><em>Système gestion bases de données</em></li>
-					</ul>
+  				   <ul class="skills">
+  					  <li><span class="bar-expand langages"></span><em>Langages informatiques</em></li>
+              <li><span class="bar-expand methodo"></span><em>Méthodologie et modélisation</em></li>
+  						<li><span class="bar-expand systeme"></span><em>Système d'exploitation et réseaux</em></li>
+  						<li><span class="bar-expand logiciel"></span><em>Outils et atelier génie logiciel</em></li>
+  						<li><span class="bar-expand bdd"></span><em>Système gestion bases de données</em></li>
+  					</ul>
 
-				</div><!-- end skill-bars -->
+  				</div><!-- end skill-bars -->
 
-			</div> <!-- main-col end -->
+  			</div> <!-- main-col end -->
 
-      </div> <!-- End skills -->
+        </div> <!-- End skills -->
+      </section>
 
    </section> <!-- Resume Section End-->
 
 
    <!-- Portfolio Section
    ================================================== -->
-   <section id="portfolio">
+   <!-- <section id="portfolio">
 
       <div id="ttt" class="row">
 
@@ -288,7 +286,7 @@
 
             <h1> Langages, logiciels... </h1>
 
-            <!-- portfolio-wrapper -->
+            <!-- portfolio-wrapper 
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
 
           	   <div class="columns portfolio-item">
@@ -306,7 +304,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -320,10 +318,10 @@
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
+                     </a> 
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -340,7 +338,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -357,7 +355,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -374,7 +372,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -391,7 +389,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -408,7 +406,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -429,7 +427,7 @@
 
             </div> <!-- portfolio-wrapper end -->
 
-         </div> <!-- twelve columns end -->
+         </div> <!-- twelve columns end --> 
 
 
          <!-- Modal Popup
@@ -608,7 +606,7 @@
 					<fieldset>
 
                   <div>
-						   <label for="contactName">Name <span class="required">*</span></label>
+						   <label for="contactName">Nom <span class="required">*</span></label>
 						   <input type="text" value="" size="35" id="contactName" name="contactName">
                   </div>
 
@@ -618,7 +616,7 @@
                   </div>
 
                   <div>
-						   <label for="contactSubject">Subject</label>
+						   <label for="contactSubject">Objet</label>
 						   <input type="text" value="" size="35" id="contactSubject" name="contactSubject">
                   </div>
 
@@ -628,7 +626,7 @@
                   </div>
 
                   <div>
-                     <button class="submit">Submit</button>
+                     <button id="submit" class="submit">Soumettre</button>
                      <span id="image-loader">
                         <img alt="" src="images/loader.gif">
                      </span>
@@ -638,10 +636,10 @@
 				   </form> <!-- Form End -->
 
                <!-- contact-warning -->
-               <div id="message-warning"> Error boy</div>
+               <div id="message-warning"> Erreur </div>
                <!-- contact-success -->
 				   <div id="message-success">
-                  <i class="fa fa-check"></i>Your message was sent, thank you!<br>
+                  <i class="fa fa-check"></i>Votre message a été envoyé, je vous remercie !<br>
 				   </div>
 
             </div>
@@ -666,7 +664,7 @@
                   </br></br></br></br></br></br>
                   <h4 class="widget-title">Mes réseaux :</h4>
                   </br></br>
-                  <ul class="social">
+                  <ul id="res" class="social">
                      <li><a href="https://twitter.com/GabinSalabert"><i class="fa fa-twitter"></i></a></li>
                      <li><a href="https://www.linkedin.com/in/gabin-salabert-30077b150/"><i class="fa fa-linkedin"></i></a></li>
                      <li><a href="https://www.instagram.com/gabzslbt/"><i class="fa fa-instagram"></i></a></li>
